# arduinomcp3208

./: CMakeLists.txt  README.md  library.properties
examples/single/: single.ino
src/: gosmcp3208.cpp  gosmcp3208.h
